fix: fixing issues with previous work and colour table alignment

--- a/packages/react/src/jigsaw.scss
+++ b/packages/react/src/jigsaw.scss
@@ -69,4 +69,5 @@ html {
 // Ensure fonts are applied to buttons by default
 button {
   font: inherit;
+  letter-spacing: inherit;
 }
